# Note-Nestle-Rust

backend/: Cargo.toml
backend/entity/: Cargo.toml
backend/entity/src/: feedback.rs  file.rs  mod.rs  prelude.rs  subject.rs  unit.rs  user.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20241029_105944_create_subjects.rs  m20241103_005431_subject_changes.rs  m20241103_073205_user_table.rs  m20241103_100024_feedback_table.rs
backend/src/: main.rs
backend/src/routes/: auth_routes.rs  feedback_routes.rs  mod.rs  subject_routes.rs
backend/src/routes/handlers/: auth_handler.rs  feedback_handler.rs  mod.rs  subject_handler.rs
backend/src/utils/: constants.rs  jwt.rs  mod.rs
frontend/: package.json
