[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

lazy_static = "1.5.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
actix-web = "4.9.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres" , "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
